--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "prettier": "prettier --write \"**/*.{js,json,css,scss,less,ts,html,component.html}\"",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -11,17 +12,27 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.0",
+    "@angular/cdk": "^12.2.13",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
+    "@angular/material": "^12.2.13",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@material/toolbar": "^2.3.0",
+    "@ngneat/tailwind": "^7.0.3",
+    "material-icons": "^1.10.8",
+    "ng-particles": "^2.42.4",
+    "ngx-skeleton-loader": "^5.0.0",
     "rxjs": "~6.6.0",
+    "rxjs-compat": "^6.6.7",
+    "sass": "^1.49.10",
     "sweetalert2": "^11.4.7",
+    "tailwindcss": "^2.2.19",
     "tslib": "^2.3.0",
+    "tsparticles": "^1.42.4",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -36,6 +47,13 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "prettier": "^2.2.1",
+    "tslint-config-prettier": "1.18.0",
     "typescript": "~4.3.5"
+  },
+  "lint-staged": {
+    "*.{js,json,css,scss,less,md,ts,html,component.html}": [
+      "prettier --write --ignore-unknown"
+    ]
   }
 }
