--- a/package.json
+++ b/package.json
@@ -11,45 +11,54 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.0",
-    "@angular/cdk": "^12.2.13",
-    "@angular/common": "~12.2.0",
-    "@angular/compiler": "~12.2.0",
-    "@angular/core": "~12.2.0",
-    "@angular/forms": "~12.2.0",
-    "@angular/material": "^12.2.13",
-    "@angular/platform-browser": "~12.2.0",
-    "@angular/platform-browser-dynamic": "~12.2.0",
-    "@angular/router": "~12.2.0",
-    "@material/toolbar": "^2.3.0",
+    "@angular/animations": "~12.0.3",
+    "@angular/cdk": "^12.0.3",
+    "@angular/common": "~12.0.3",
+    "@angular/compiler": "~12.0.3",
+    "@angular/core": "~12.0.3",
+    "@angular/forms": "~12.0.3",
+    "@angular/google-maps": "^11.2.12",
+    "@angular/material": "^12.0.3",
+    "@angular/platform-browser": "~12.0.3",
+    "@angular/platform-browser-dynamic": "~12.0.3",
+    "@angular/router": "~12.0.3",
     "@ngneat/tailwind": "^7.0.3",
-    "material-icons": "^1.10.8",
-    "ng-particles": "^2.42.4",
-    "ngx-skeleton-loader": "^5.0.0",
+    "ng-particles": "^2.7.3",
+    "ngx-skeleton-loader": "^2.10.0",
     "rxjs": "~6.6.0",
-    "rxjs-compat": "^6.6.7",
-    "sass": "^1.49.10",
-    "sweetalert2": "^11.4.7",
-    "tailwindcss": "^2.2.19",
-    "tslib": "^2.3.0",
-    "tsparticles": "^1.42.4",
+    "sweetalert2": "^11.4.8",
+    "tslib": "^2.0.0",
+    "tsparticles": "^1.24.3",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.1",
-    "@angular/cli": "~12.2.1",
-    "@angular/compiler-cli": "~12.2.0",
-    "@types/jasmine": "~3.8.0",
+    "@angular-builders/custom-webpack": "11.1.1",
+    "@angular-devkit/build-angular": "~12.0.3",
+    "@angular/cli": "~12.0.3",
+    "@angular/compiler-cli": "~12.0.3",
+    "@schuchard/prettier": "^5.0.0",
+    "@tailwindcss/forms": "0.3.3",
+    "@tailwindcss/typography": "0.4.1",
+    "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
-    "jasmine-core": "~3.8.0",
-    "karma": "~6.3.0",
+    "codelyzer": "^6.0.0",
+    "husky": "6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~6.3.3",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "lint-staged": "10.5.4",
+    "postcss-ng-tailwind-in-components": "0.0.4",
     "prettier": "^2.2.1",
+    "protractor": "~7.0.0",
+    "tailwindcss": "2.1.4",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
     "tslint-config-prettier": "1.18.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.2.4"
   },
   "lint-staged": {
     "*.{js,json,css,scss,less,md,ts,html,component.html}": [
