--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
     "@ngneat/tailwind": "^7.0.3",
+    "axios": "^0.26.1",
     "ng-particles": "^2.7.3",
     "ngx-skeleton-loader": "^2.10.1",
     "rxjs": "~6.6.0",
