Agregando la creacion del token al pago con tarjeta de credito

--- a/package.json
+++ b/package.json
@@ -22,12 +22,17 @@
     "@angular/platform-browser": "~12.0.3",
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
+    "@mugan86/stripe-payment-form": "^0.2.5",
     "@ngneat/tailwind": "^7.0.3",
+    "@stripe/stripe-js": "^1.29.0",
+    "@types/stripe-v3": "^3.1.26",
     "axios": "^0.26.1",
     "ng-particles": "^2.7.3",
     "ngx-skeleton-loader": "^2.10.1",
+    "ngx-stripe": "^13.1.0",
     "reactstrap": "^9.0.2",
     "rxjs": "~6.6.0",
+    "stripe-angular": "^1.7.0",
     "sweetalert2": "^11.4.8",
     "tsparticles": "^1.24.3",
     "zone.js": "~0.11.4"
